// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NestedListView renders customised 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "justifyContent": "center",
      },
      Object {
        "borderColor": "black",
        "borderWidth": 1,
        "paddingLeft": 15,
      },
      Object {
        "height": 60,
      },
    ]
  }
>
  <Text>
    Test
  </Text>
</View>
`;

exports[`NestedListView renders with simple array 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "justifyContent": "center",
      },
      Object {
        "borderColor": "black",
        "borderWidth": 1,
        "paddingLeft": 10,
      },
      Object {},
    ]
  }
>
  <Text>
    Test
  </Text>
</View>
`;

exports[`NestedListView renders with simple array without level 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "justifyContent": "center",
      },
      Object {
        "borderColor": "black",
        "borderWidth": 1,
        "paddingLeft": 0,
      },
      Object {},
    ]
  }
>
  <Text>
    Test
  </Text>
</View>
`;
